added activity feature